commit de segurança
